# vision-coder

./: .gitignore  CLAUDE.md  Dockerfile  README.md  demo_visual_reward.py  openenv.yaml  pyproject.toml  requirements.txt  test_render.py  test_train.py
assets/generations/: 158.html  428.html  5.html
assets/results/: samples_meta.json
configs/: accelerate_1gpu.yaml  accelerate_2gpu.yaml  accelerate_2gpu_ds2.yaml  accelerate_2gpu_ds2_nooffload.yaml  accelerate_2gpu_ds3.yaml  accelerate_3gpu.yaml  accelerate_4gpu.yaml
experiments/: plot_run.py  qual_openenv.py
notebooks/: qwen3vl.ipynb  qwen_grpo.ipynb  qwen_grpo_htmlcss.ipynb  synthetic_html_generate_and_eval.ipynb
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  refs.bib
scripts/: a40_job.sh  dgx_job.sh  grpo_and_eval_4b.sh  l40_job.sh  plot_design2code.py  plot_reward_validation.py  plot_reward_weights.py  plot_training_curves.py  post_grpo_eval_4b.sh  run_4l40s.sh  run_all.sh  setup-compute.sh  train_eval_4b.sh  vllm.sh  vllm_for_inference.sh  vllm_for_training.sh  wait_and_run_grpo.sh
tests/: test_websight.py
vcoder/: __init__.py
vcoder/data/: __init__.py  generate_synthetic_html.py  openenv.py  websight.py
vcoder/demo/: _test_playwright.py  app.py  demo_streamlit.py  demo_visual_reward.py  gen_samples.py  inference.py
vcoder/eval/: eval_standalone.py  eval_vllm.py  evaluate_synthetic_html.py  extract_testset.py  generate_predictions.py
vcoder/pipelines/: sft_openenv.py  sft_training.py  training.py
vcoder/rendering/: __init__.py  browser_pool.py  html_renderer.py
(+18 files in other folders)
